# sec-filings

./: .gitignore  pyproject.toml
src/sec_filings/: __init__.py  download_filings.py
