[project]
name = "sec-filings"
version = "0.1.0"
description = "Download 10-K and 10-Q filings from SEC EDGAR"
readme = "README.md"
authors = [
    { name = "plwg", email = "56353330+plwg@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
sec-filings = "sec_filings:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
